[package]
authors = ["Sean Bowe <ewillbefull@gmail.com>"]
description = "zk-SNARK library"
documentation = "https://github.com/ebfull/bellman"
homepage = "https://github.com/ebfull/bellman"
license = "MIT/Apache-2.0"
name = "bellman"
repository = "https://github.com/ebfull/bellman"
version = "0.1.0"

[dependencies]
rand = "0.4"
bit-vec = "0.4.4"
futures = "0.1"
pairing = { path = "../pairing" }
byteorder = "1"

[dependencies.futures-cpupool]
version = "0.1"
optional = true

[dependencies.num_cpus]
version = "1"
optional = true

[dependencies.crossbeam]
version = "0.3"
optional = true

[features]
default = ["multicore"]
multicore = ["futures-cpupool", "crossbeam", "num_cpus"]
